--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
     <link href="lib/simple.min.css" rel="stylesheet" type="text/css">
+    <script src="lib/htmx.min.js"></script>
 </head>
 
 <body>
